<?xml version="1.0" encoding="utf-8"?>

<RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/rg_theme"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center_horizontal"
    android:orientation="horizontal">

    <RadioButton
        android:id="@+id/radio_blue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:buttonTint="?attr/colorPrimaryDark"
        android:checked="true"
        android:text="@string/color_blue" />

    <RadioButton
        android:id="@+id/radio_green"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:buttonTint="?attr/colorPrimaryDark"
        android:text="@string/color_green" />

    <RadioButton
        android:id="@+id/radio_gray"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:buttonTint="?attr/colorPrimaryDark"
        android:text="@string/color_gray" />

    <RadioButton
        android:id="@+id/radio_yellow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:buttonTint="?attr/colorPrimaryDark"
        android:text="@string/color_yellow" />

    <RadioButton
        android:id="@+id/radio_purple"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:buttonTint="?attr/colorPrimaryDark"
        android:text="@string/color_purple" />

</RadioGroup>